[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/game_world.gd" type="Script" id=1]
[ext_resource path="res://scenes/camera.gd" type="Script" id=2]
[ext_resource path="res://scenes/menu.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/logo.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/song.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]

resource_name = "show"
length = 1.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1100, 150 ), Vector2( 150, 150 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "show"
length = 2.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 1300 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "show"
length = 1.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("help_label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 1200 ), Vector2( 0, 350 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "start"
length = 5.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu/option_menu/vol/vol:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}

[node name="game_world" type="Node2D" groups=[
"game_world",
]]

script = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="." groups=[
"camera",
]]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -1000
limit_top = -1000
limit_right = 1000
limit_bottom = 1000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 2 )

[node name="menu" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1300.0
margin_right = 40.0
margin_bottom = 1341.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 3 )

[node name="main_menu" type="VBoxContainer" parent="menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="logo" type="TextureRect" parent="menu/main_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 250 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="plays" type="Button" parent="menu/main_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 254.0
margin_right = 500.0
margin_bottom = 294.0
rect_min_size = Vector2( 500, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
text = "Play"
flat = true

[node name="options" type="Button" parent="menu/main_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 298.0
margin_right = 500.0
margin_bottom = 338.0
rect_min_size = Vector2( 500, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
text = "Options"
flat = true

[node name="help" type="Button" parent="menu/main_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 342.0
margin_right = 500.0
margin_bottom = 382.0
rect_min_size = Vector2( 500, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
text = "Help"
flat = true

[node name="quit" type="Button" parent="menu/main_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 386.0
margin_right = 500.0
margin_bottom = 426.0
rect_min_size = Vector2( 500, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
text = "Quit"
flat = true

[node name="option_menu" type="VBoxContainer" parent="menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 150.0
margin_right = 1414.0
margin_bottom = 318.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="invert_camera" type="CheckButton" parent="menu/option_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 314.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 1
shortcut = null
group = null
text = "Invert Camera "
flat = false
align = 0

[node name="particles" type="CheckButton" parent="menu/option_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 314.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 1
shortcut = null
group = null
text = "Particle Effects"
flat = false
align = 0

[node name="fullscreen" type="CheckButton" parent="menu/option_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 88.0
margin_right = 314.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 1
shortcut = null
group = null
text = "Fullscreen       "
flat = false
align = 0

[node name="sfx" type="HBoxContainer" parent="menu/option_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 314.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="sfx" type="Label" parent="menu/option_menu/sfx"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1.0
margin_right = 99.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "SFX Volume    : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vol" type="HSlider" parent="menu/option_menu/sfx"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 103.0
margin_right = 314.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -60.0
max_value = 0.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 5
ticks_on_borders = false
focus_mode = 1

[node name="vol" type="HBoxContainer" parent="menu/option_menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 152.0
margin_right = 314.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="mus" type="Label" parent="menu/option_menu/vol"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1.0
margin_right = 99.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Music Volume: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vol" type="HSlider" parent="menu/option_menu/vol"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 103.0
margin_right = 314.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -60.0
max_value = 0.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 5
ticks_on_borders = false
focus_mode = 1

[node name="animation" type="AnimationPlayer" parent="menu/option_menu"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/show = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="animation" type="AnimationPlayer" parent="menu"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "show"

[node name="scores" type="VBoxContainer" parent="menu"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -450.0
margin_top = 300.0
margin_right = -330.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="hcont" type="HBoxContainer" parent="menu/scores"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="high_score" type="Label" parent="menu/scores/hcont"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Hi-Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hi" type="Label" parent="menu/scores/hcont"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 62.0
margin_right = 120.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "50"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lcont" type="HBoxContainer" parent="menu/scores"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 120.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="last-score" type="Label" parent="menu/scores/lcont"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Last-Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="last" type="Label" parent="menu/scores/lcont"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_right = 120.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="song" type="AudioStreamPlayer" parent="menu"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "music"

[node name="help_label" type="Label" parent="menu"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1200.0
margin_right = 489.0
margin_bottom = 1367.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Click and drag a tendril's head to move them.
When a tendril collides with another of the same colour, both are destroyed.
When of a different colour, however, all tendrils growth rates increase.

Destroy more than one tendril against another to earn a score multiplier.

Controls:

Left Click - grab tendril
Middle/Right Click - move camera"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="help_animation" type="AnimationPlayer" parent="menu"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/show = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="game_start" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/start = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start"

[connection signal="start_play" from="menu" to="." method="start_game"]

[connection signal="pressed" from="menu/main_menu/plays" to="menu" method="_on_plays_pressed"]

[connection signal="pressed" from="menu/main_menu/options" to="menu" method="_on_options_pressed"]

[connection signal="pressed" from="menu/main_menu/help" to="menu" method="_on_help_pressed"]

[connection signal="pressed" from="menu/main_menu/quit" to="menu" method="_on_quit_pressed"]

[connection signal="toggled" from="menu/option_menu/invert_camera" to="menu" method="_on_invert_camera_toggled"]

[connection signal="toggled" from="menu/option_menu/particles" to="menu" method="_on_particles_toggled"]

[connection signal="toggled" from="menu/option_menu/fullscreen" to="menu" method="_on_fullscreen_toggled"]

[connection signal="value_changed" from="menu/option_menu/sfx/vol" to="menu" method="sfx_vol_changed"]

[connection signal="value_changed" from="menu/option_menu/vol/vol" to="menu" method="music_vol_changed"]


